@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-12T16:15:54Z",
-  "count_outdated" : 972,
-  "uniques_outdated" : 568,
+  "timestamp" : "2023-11-14T01:01:57Z",
+  "count_outdated" : 976,
+  "uniques_outdated" : 570,
   "count" : 1008,
   "uniques" : 586,
   "clones" : [
-    {
-      "timestamp": "2023-10-30T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 2, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-10-31T00:00:00Z",
       "count": 2,
