@@ -1,12 +1,7 @@
 {
-  "count": 36,
+  "count": 32,
   "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2023-10-30T00:00:00Z",
-      "count": 4,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-10-31T00:00:00Z",
       "count": 2,
