@@ -1,3 +1,12 @@
+2023-11-14T01:01:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6857776596 # 1374
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-14
+* notice: last 14d: unq all: 2 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 568 972 / 586 1008
+* notice: next accum: outdated-unq outdated-all / unq all: 570 976 / 586 1008
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-10-30] / []
+
 2023-11-12T16:15:54Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6841786075 # 1370
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-12
